set up sass in react app

--- a/react/css/main.css
+++ b/react/css/main.css
@@ -1,9 +1,242 @@
+body {
+  margin: 0;
+  font-family: "Enriqueta", serif;
+  min-width: 500px;
+}
+
+header {
+  height: 60px;
+  background-color: #04724D;
+  align-items: center;
+  z-index: 10;
+}
+
+#logo {
+  width: 90px;
+  grid-column: 1;
+  margin-left: 10px;
+  color: #F4F4F9;
+}
+
+#main_nav {
+  display: none;
+}
+
+#menu {
+  width: 50px;
+  justify-self: end;
+  grid-column: 4/5;
+  padding-right: 10px;
+  margin-right: 10px;
+}
+
+#menu:hover {
+  cursor: pointer;
+}
+
+@media screen and (min-width: 640px) {
+  header {
+    height: 70px;
+  }
+  #logo {
+    width: 110px;
+    margin-left: 20px;
+  }
+  #menu {
+    grid-column: -1;
+    margin-right: 20px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  #logo {
+    margin-left: 30px;
+  }
+  #main_nav {
+    display: flex;
+    grid-column: 9/-1;
+    justify-self: flex-end;
+    height: 100%;
+    justify-content: center;
+    flex-direction: column;
+    margin-right: 30px;
+  }
+  #main_nav ul {
+    list-style-type: none;
+    display: flex;
+  }
+  #main_nav ul li a {
+    color: #F4F4F9;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 10px;
+    margin-right: 30px;
+    transition: all 0.5s ease;
+  }
+  #main_nav ul li a:hover {
+    border-bottom: 4px solid #F4F4F9;
+    padding-bottom: 10px;
+  }
+  #menu {
+    display: none;
+  }
+}
+#hero {
+  column-span: all;
+  height: 250px;
+  background-color: #8e8e8e;
+}
+
+#see_more {
+  grid-column: 3/5;
+  align-self: end;
+  justify-self: end;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 15px;
+  width: 150px;
+  text-decoration: none;
+  color: #F4F4F9;
+  background-color: #586F7C;
+  font-size: 14px;
+  border-radius: 10px;
+}
+
+#see_more span {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+#site_info {
+  background-color: #586F7C;
+  height: 142px;
+}
+
+#site_info p {
+  grid-column: 1/5;
+  color: #F4F4F9;
+  font-size: 14px;
+  text-align: center;
+  margin-right: 10px;
+  margin-left: 10px;
+  align-self: center;
+}
+
+.furniture_selection {
+  margin-top: 40px;
+  grid-column: span 2;
+}
+
+.furniture_selection a {
+  text-decoration: none;
+}
+
+.furniture_selection p {
+  background-color: #B8DBD9;
+  color: #F4F4F9;
+  font-size: 18px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
+  display: block;
+  width: 100%;
+  margin: 0;
+}
+
+.furniture_selection a div {
+  background-color: #8e8e8e;
+  height: 150px;
+}
+
+@media screen and (min-width: 640px) {
+  #hero {
+    height: 350px;
+  }
+  #see_more {
+    grid-column: 7/9;
+    width: 175px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  #site_info {
+    height: 200px;
+  }
+  #site_info p {
+    grid-column: 1/9;
+  }
+  .furniture_selection {
+    grid-column: span 3;
+  }
+}
+@media screen and (min-width: 1024px) {
+  #hero {
+    height: 450px;
+  }
+  #see_more {
+    grid-column: 9/13;
+    font-size: 16px;
+    width: 225px;
+  }
+  #site_info {
+    height: 250px;
+  }
+  #site_info p {
+    grid-column: 1/13;
+    font-size: 18px;
+  }
+  .furniture_selection {
+    grid-column: span 4;
+  }
+}
 * {
   margin: 0;
+  padding: 0;
+  font-size: 12px;
 }
 
 .hidden {
   display: none;
+}
+
+.full_grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 10px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 640px) {
+  .full_grid {
+    grid-template-columns: repeat(6, 1fr);
+    grid-column-gap: 30px;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-column-gap: 10px;
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .full_grid {
+    grid-template-columns: repeat(12, 1fr);
+    grid-column-gap: 40px;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-column-gap: 10px;
+    margin-right: 30px;
+    margin-left: 30px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
