--- a/react/css/main.css
+++ b/react/css/main.css
@@ -1,9 +1,17 @@
-* {
-  margin: 0;
-}
+/* Error: no such file or directory
+ *   ,
+ * 1 | @use 'components';
+ *   | ^^^^^^^^^^^^^^^^^
+ *   '
+ *   sass/main.scss 1:1  root stylesheet */
 
-.hidden {
-  display: none;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: no such file or directory\a   \2577 \a 1 \2502  @use 'components';\a   \2502  ^^^^^^^^^^^^^^^^^\a   \2575 \a   sass/main.scss 1:1  root stylesheet";
 }
-
-/*# sourceMappingURL=main.css.map */
