--- a/react/css/main.css
+++ b/react/css/main.css
@@ -80,6 +80,53 @@ header {
     display: none;
   }
 }
+#mobile_menu {
+  position: absolute;
+  width: 100%;
+  list-style: none;
+  padding: 10px;
+  background-color: #04724D;
+  margin: 0;
+  border-top: solid 2px #586F7C;
+  border-bottom: solid 2px #586F7C;
+  filter: brightness(0.9);
+}
+
+#mobile_menu li:first-of-type {
+  margin: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#mobile_menu li:last-of-type {
+  margin-bottom: 50px;
+}
+
+#mobile_menu li {
+  text-align: center;
+  font-size: 24px;
+  margin-top: 20px;
+  color: #586F7C;
+  width: 150px;
+  margin-right: auto;
+  margin-left: auto;
+  border-bottom: solid 2px #586F7C;
+}
+
+#mobile_menu a {
+  color: #586F7C;
+  text-decoration: none;
+}
+
+.toggled {
+  display: none;
+}
+
+@media screen and (min-width: 1024px) {
+  #mobile_menu {
+    display: none;
+  }
+}
 #hero {
   column-span: all;
   height: 250px;
