--- a/react/css/main.css
+++ b/react/css/main.css
@@ -87,35 +87,36 @@ header {
   padding: 10px;
   background-color: #04724D;
   margin: 0;
-  border-top: solid 2px #586F7C;
-  border-bottom: solid 2px #586F7C;
+  border-top: solid 2px #F4F4F9;
   filter: brightness(0.9);
 }
 
 #mobile_menu li:first-of-type {
   margin: 0;
+  padding-top: 20px;
   margin-right: auto;
   margin-left: auto;
 }
 
 #mobile_menu li:last-of-type {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 #mobile_menu li {
   text-align: center;
   font-size: 24px;
-  margin-top: 20px;
+  padding-top: 30px;
   color: #586F7C;
   width: 150px;
   margin-right: auto;
   margin-left: auto;
-  border-bottom: solid 2px #586F7C;
+  border-bottom: solid 2px #F4F4F9;
 }
 
 #mobile_menu a {
-  color: #586F7C;
+  color: #F4F4F9;
   text-decoration: none;
+  font-size: 24px;
 }
 
 .toggled {
