--- a/react/sass/components/_mobileMenu.scss
+++ b/react/sass/components/_mobileMenu.scss
@@ -7,36 +7,37 @@
     padding: 10px;
     background-color: $dark_green;
     margin: 0;
-    border-top: solid 2px $dark_grey;
-    border-bottom: solid 2px $dark_grey;
+    border-top: solid 2px $white;
     filter: brightness(0.9);
 }
 
 #mobile_menu li:first-of-type {
     margin: 0;
+    padding-top: 20px;
     margin-right: auto;
     margin-left: auto;
 }
 
 #mobile_menu li:last-of-type {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 
 #mobile_menu li {
     text-align: center;
     font-size: 24px;
-    margin-top: 20px;
+    padding-top: 30px;
     color: $dark_grey; 
     width: 150px;
     margin-right: auto;
     margin-left: auto;
-    border-bottom: solid 2px $dark_grey;
+    border-bottom: solid 2px $white;
 }
 
 #mobile_menu a {
-    color: $dark_grey;
+    color: $white;
     text-decoration: none;  
+    font-size: 24px;
 }
 
 .toggled {
